<resources>
    <string name="app_name">ElectionPollApplication</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vote_splash_image">Vote_splash_image</string>
    <string name="button">Button</string>
    <string name="iniciar">Iniciar</string>
    <string name="seja_bem_vindo">Seja bem-vindo!</string>
    <string name="election_poll">Election Poll</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="pesquisa_estimulada">Pesquisa estimulada</string>
    <string name="finalizar">Finalizar</string>
    <string name="pesquisa_espontanea">Pesquisa Espontanea</string>
    <string name="descri_o_breve_do_candidato_ou_do_projeto">Descrição breve do candidato ou do projeto.</string>
    <string name="votar">Votar</string>
    <string name="nome_do_candidato">Nome do Candidato</string>
    <string name="imagem_do_candidato">Imagem do candidato</string>
    <string name="principais_problemas">Principais Problemas</string>
</resources>